@@ -13,7 +13,7 @@
  *  NO WARRANTY.
  *
  * Unless otherwise stated, the rest of PhysicsFS falls under the zlib license.
- *  Please see LICENSE in the root of the source tree.
+ *  Please see LICENSE.txt in the root of the source tree.
  *
  * SDL falls under the LGPL license. You can get SDL at http://www.libsdl.org/
  *
@@ -25,7 +25,7 @@
 
 static int physfsrwops_seek(SDL_RWops *rw, int offset, int whence)
 {
-    PHYSFS_file *handle = (PHYSFS_file *) rw->hidden.unknown.data1;
+    PHYSFS_File *handle = (PHYSFS_File *) rw->hidden.unknown.data1;
     int pos = 0;
 
     if (whence == SEEK_SET)
@@ -40,18 +40,18 @@ static int physfsrwops_seek(SDL_RWops *rw, int offset, int whence)
         {
             SDL_SetError("Can't find position in file: %s",
                           PHYSFS_getLastError());
-            return(-1);
+            return -1;
         } /* if */
 
         pos = (int) current;
         if ( ((PHYSFS_sint64) pos) != current )
         {
             SDL_SetError("Can't fit current file position in an int!");
-            return(-1);
+            return -1;
         } /* if */
 
         if (offset == 0)  /* this is a "tell" call. We're done. */
-            return(pos);
+            return pos;
 
         pos += offset;
     } /* else if */
@@ -62,14 +62,14 @@ static int physfsrwops_seek(SDL_RWops *rw, int offset, int whence)
         if (len == -1)
         {
             SDL_SetError("Can't find end of file: %s", PHYSFS_getLastError());
-            return(-1);
+            return -1;
         } /* if */
 
         pos = (int) len;
         if ( ((PHYSFS_sint64) pos) != len )
         {
             SDL_SetError("Can't fit end-of-file position in an int!");
-            return(-1);
+            return -1;
         } /* if */
 
         pos += offset;
@@ -78,65 +78,65 @@ static int physfsrwops_seek(SDL_RWops *rw, int offset, int whence)
     else
     {
         SDL_SetError("Invalid 'whence' parameter.");
-        return(-1);
+        return -1;
     } /* else */
 
     if ( pos < 0 )
     {
         SDL_SetError("Attempt to seek past start of file.");
-        return(-1);
+        return -1;
     } /* if */
     
     if (!PHYSFS_seek(handle, (PHYSFS_uint64) pos))
     {
         SDL_SetError("PhysicsFS error: %s", PHYSFS_getLastError());
-        return(-1);
+        return -1;
     } /* if */
 
-    return(pos);
+    return pos;
 } /* physfsrwops_seek */
 
 
 static int physfsrwops_read(SDL_RWops *rw, void *ptr, int size, int maxnum)
 {
-    PHYSFS_file *handle = (PHYSFS_file *) rw->hidden.unknown.data1;
+    PHYSFS_File *handle = (PHYSFS_File *) rw->hidden.unknown.data1;
     PHYSFS_sint64 rc = PHYSFS_read(handle, ptr, size, maxnum);
-    if ((int) rc != maxnum)
+    if (rc != maxnum)
     {
         if (!PHYSFS_eof(handle)) /* not EOF? Must be an error. */
             SDL_SetError("PhysicsFS error: %s", PHYSFS_getLastError());
     } /* if */
 
-    return((int) rc);
+    return ((int) rc);
 } /* physfsrwops_read */
 
 
 static int physfsrwops_write(SDL_RWops *rw, const void *ptr, int size, int num)
 {
-    PHYSFS_file *handle = (PHYSFS_file *) rw->hidden.unknown.data1;
+    PHYSFS_File *handle = (PHYSFS_File *) rw->hidden.unknown.data1;
     PHYSFS_sint64 rc = PHYSFS_write(handle, ptr, size, num);
-    if ((int) rc != num)
+    if (rc != num)
         SDL_SetError("PhysicsFS error: %s", PHYSFS_getLastError());
 
-    return((int) rc);
+    return ((int) rc);
 } /* physfsrwops_write */
 
 
 static int physfsrwops_close(SDL_RWops *rw)
 {
-    PHYSFS_file *handle = (PHYSFS_file *) rw->hidden.unknown.data1;
+    PHYSFS_File *handle = (PHYSFS_File *) rw->hidden.unknown.data1;
     if (!PHYSFS_close(handle))
     {
         SDL_SetError("PhysicsFS error: %s", PHYSFS_getLastError());
-        return(-1);
+        return -1;
     } /* if */
 
     SDL_FreeRW(rw);
-    return(0);
+    return 0;
 } /* physfsrwops_close */
 
 
-static SDL_RWops *create_rwops(PHYSFS_file *handle)
+static SDL_RWops *create_rwops(PHYSFS_File *handle)
 {
     SDL_RWops *retval = NULL;
 
@@ -155,11 +155,11 @@ static SDL_RWops *create_rwops(PHYSFS_file *handle)
         } /* if */
     } /* else */
 
-    return(retval);
+    return retval;
 } /* create_rwops */
 
 
-SDL_RWops *PHYSFSRWOPS_makeRWops(PHYSFS_file *handle)
+SDL_RWops *PHYSFSRWOPS_makeRWops(PHYSFS_File *handle)
 {
     SDL_RWops *retval = NULL;
     if (handle == NULL)
@@ -167,25 +167,25 @@ SDL_RWops *PHYSFSRWOPS_makeRWops(PHYSFS_file *handle)
     else
         retval = create_rwops(handle);
 
-    return(retval);
+    return retval;
 } /* PHYSFSRWOPS_makeRWops */
 
 
 SDL_RWops *PHYSFSRWOPS_openRead(const char *fname)
 {
-    return(create_rwops(PHYSFS_openRead(fname)));
+    return create_rwops(PHYSFS_openRead(fname));
 } /* PHYSFSRWOPS_openRead */
 
 
 SDL_RWops *PHYSFSRWOPS_openWrite(const char *fname)
 {
-    return(create_rwops(PHYSFS_openWrite(fname)));
+    return create_rwops(PHYSFS_openWrite(fname));
 } /* PHYSFSRWOPS_openWrite */
 
 
 SDL_RWops *PHYSFSRWOPS_openAppend(const char *fname)
 {
-    return(create_rwops(PHYSFS_openAppend(fname)));
+    return create_rwops(PHYSFS_openAppend(fname));
 } /* PHYSFSRWOPS_openAppend */
 
 
